--- a/RebtelDialConcept/Views/CollectionView/CountryRotatingCell.xib
+++ b/RebtelDialConcept/Views/CollectionView/CountryRotatingCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ire-Iv-4on">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ire-Iv-4on">
                         <rect key="frame" x="3" y="3" width="94" height="94"/>
                     </imageView>
                 </subviews>
